Implmented API versioning and logginf feature